<resources>
    <string name="app_name">Test App</string>

    <string name="logo_desc">App Logo</string>
    <string name="login_title">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="login_btn">Login</string>
    <string name="register_text">Don\'t have an account? Register</string>

    <string name="empty_email">Please enter email</string>
    <string name="empty_password">Please enter password</string>
    <string name="login_success">Login Successful</string>
</resources>
